@@ -41,7 +41,8 @@
       by \code{referencePressure}.  This is ignored if \code{eos="teos"}, because
       in that case the y axis is necessarily the conservative formulation of
       temperature.}
-  \item{type}{type of plot, e.g. \code{"p"} for points}
+  \item{type}{representation of data, \code{"p"} for points, \code{"l"} for
+      connecting lines, or \code{"n"} for no indication.}
   \item{referencePressure}{reference pressure, to be used in calculating
       potential temperature, if \code{inSitu} is \code{FALSE}.}
   \item{rhoLevels}{Either a list of density levels for which to draw isopycnal
